# opencv_test

./: CMakeLists.txt  main.cpp
